# shell-shortcuts

./: .gitignore  Cargo.toml  README.md  deploy.sh
src/: alias.rs  alias_list.rs  aliases.rs  error.rs  file.rs  interface.rs  main.rs
src/alias/: display.rs  mod.rs  tests.rs  validation.rs
src/alias_list/: creation.rs  display.rs  mod.rs  test_fixtures.rs
src/aliases/: display.rs  file_io.rs  mod.rs  regex_tests.rs  tests.rs
