[package]
name = "shell-shortcuts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"

[dev-dependencies]
indoc = "2.0.4"
tempdir = "0.3.7"
