[package]
name = "shell-shortcuts"
edition = "2021"
description = "Command line manager for shell aliases."
license = "MIT OR Apache-2.0"
authors = ["James Elmore <email@jameselmore.org>"]
readme = "README.md"
publish = false
repository = "https://github.com/jamesnelmore/shell-shortcuts"
keywords = ["cli"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
indoc = "2.0.4"
rstest = {version="0.18.2", default-features=false}
tempdir = "0.3.7"

# TODO change closer to release
[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
 
[lints.clippy]
pedantic = "warn"
enum_glob_use = "deny"
unwrap_used = "deny"
expect_used = "warn"
cargo = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
as_underscore = "warn"
derive_partial_eq_without_eq = "warn"
else_if_without_else = "deny"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
if_then_some_else_none = "warn"

